--- a/stock-backend/pom.xml
+++ b/stock-backend/pom.xml
@@ -6,9 +6,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.stock.analysis</groupId>
-        <artifactId>stock-analysis</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.2</version>
     </parent>
 
     <artifactId>stock-backend</artifactId>
