--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,39 +33,39 @@ services:
       - redis
 
   # 4. 前端 (Next.js)
-  frontend:
-    build: ./stock-frontend
-    image: my-nextjs-app:latest
-    restart: always
-    environment:
-      NEXT_PUBLIC_API_URL: https://47.100.96.136/api
-    depends_on:
-      - backend
+  #frontend:
+  #  build: ./stock-frontend
+  #  image: my-nextjs-app:latest
+  #  restart: always
+  #  environment:
+  #    NEXT_PUBLIC_API_URL: https://47.100.96.136/api
+  #  depends_on:
+  #    - backend
 
   # 5. ETL 任务 (Python + NumPy)
-  etl-job:
-    build: ./stock-etl
-    image: my-python-etl:latest
-    # 挂载代码目录，方便热修脚本
-    volumes:
-      - ./etl_scripts:/app/scripts
-    # 方案A: 使用 cron 在容器内运行
-    # 方案B: 这是一个死循环守护进程，内部用 schedule 库定时
-    command: python /app/scripts/main_scheduler.py
-    environment:
-      DB_HOST: db
-    depends_on:
-      - db
+  #etl-job:
+  #  build: ./stock-etl
+  #  image: my-python-etl:latest
+  #  # 挂载代码目录，方便热修脚本
+  #  volumes:
+  #    - ./etl_scripts:/app/scripts
+  #  # 方案A: 使用 cron 在容器内运行
+  #  # 方案B: 这是一个死循环守护进程，内部用 schedule 库定时
+  #  command: python /app/scripts/main_scheduler.py
+  #  environment:
+  #    DB_HOST: db
+  #  depends_on:
+  #    - db
 
   # 6. 反向代理 (Nginx)
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/cert:/etc/nginx/cert # SSL证书
-    depends_on:
-      - frontend
-      - backend
+  #nginx:
+  #  image: nginx:alpine
+  #  ports:
+  #    - "80:80"
+  #    - "443:443"
+  #  volumes:
+  #    - ./nginx/conf.d:/etc/nginx/conf.d
+  #    - ./nginx/cert:/etc/nginx/cert # SSL证书
+  #  depends_on:
+  #    - frontend
+  #    - backend
