update frontend dockerfile

--- a/stock-frontend/.dockerignore
+++ b/stock-frontend/.dockerignore
@@ -3,15 +3,10 @@ npm-debug.log
 .git
 .gitignore
 README.md
-.env
-.env.local
-.env.development
-.env.test
+.dockerignore
+Dockerfile*
+docker-compose*.yml
 .vscode
 .idea
-dist
-build
-.coverage
-.nyc_output
 .DS_Store
 *.log
