--- a/stock-frontend/Dockerfile
+++ b/stock-frontend/Dockerfile
@@ -3,46 +3,54 @@
 # ==========================================
 FROM node:18-alpine AS base
 
-# 安装 libc6-compat，这是 Alpine 运行某些 Node 库必须的依赖
-RUN apk add --no-cache libc6-compat
+# 安装必要的依赖
+RUN apk add --no-cache libc6-compat git python3 make g++
 WORKDIR /app
 
 # ==========================================
 # 阶段 2: 依赖安装 (Deps)
 # ==========================================
-FROM node:18-alpine AS deps
+FROM base AS deps
 
-RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
+# 复制package文件
 COPY package.json package-lock.json* ./
-RUN npm ci --only=production && npm cache clean --force
+
+# 安装所有依赖（包括开发依赖）
+RUN npm ci --no-audit --prefer-offline
 
 # ==========================================
-# 阶段 2: 构建应用 (Builder)
+# 阶段 3: 构建应用 (Builder)
 # ==========================================
-FROM node:18-alpine AS builder
+FROM base AS builder
 
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+# 设置构建环境
 ENV NODE_ENV=production
+ENV CI=true
+
+# 执行构建
 RUN npm run build
 
 # ==========================================
-# 阶段 3: 生产运行 (Production)
+# 阶段 4: 生产运行 (Production)
 # ==========================================
 FROM nginx:alpine AS production
 
+# 设置时区
 RUN apk add --no-cache tzdata && \
     cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" > /etc/timezone
 
+# 复制构建产物
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# 使用统一的nginx配置
-# 注意：这里使用默认配置，因为nginx服务会处理路由
+# 复制自定义nginx配置（如果存在）
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
