--- a/stock-frontend/nginx.conf
+++ b/stock-frontend/nginx.conf
@@ -4,32 +4,11 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Gzip 压缩
+    # Gzip压缩
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        application/atom+xml
-        application/geo+json
-        application/javascript
-        application/x-javascript
-        application/json
-        application/ld+json
-        application/manifest+json
-        application/rdf+xml
-        application/rss+xml
-        application/xhtml+xml
-        application/xml
-        font/eot
-        font/otf
-        font/ttf
-        image/svg+xml
-        text/css
-        text/javascript
-        text/plain
-        text/xml;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     # 缓存控制
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
@@ -37,13 +16,13 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # SPA 路由支持
+    # SPA路由支持
     location / {
         try_files $uri $uri/ /index.html;
     }
 
     # 安全头
     add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
 }
