--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,60 +1,40 @@
-events {
-    worker_connections 1024;
+upstream frontend_server {
+    server frontend:80;
 }
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    
-    # 开启 Gzip 压缩，显著提升前端加载速度
-    gzip on;
-    gzip_types text/plain application/xml text/css application/javascript;
+upstream backend_server {
+    server backend:8080;
+}
 
-    # 定义上游服务 (对应 docker-compose 中的 service name)
-    upstream frontend_server {
-        server frontend:3000;
+server {
+    listen 80;
+    server_name localhost;
+
+    # 前端静态文件
+    location / {
+        proxy_pass http://frontend_server;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    upstream backend_server {
-        server backend:8080;
-    }
-
-    server {
-        listen 80;
-        # 你的域名，如果没有可以用 ECS 公网 IP
-        server_name localhost; 
-
-        # 1. 前端转发 (Next.js)
-        location / {
-            proxy_pass http://frontend_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            
-            # WebSocket 支持 (Next.js 热更新或某些实时功能需要)
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # 2. 后端 API 转发 (Spring Boot)
-        # 所有以 /api 开头的请求都会转给后端
-        location /api/ {
-            # 重写 URL：如果后端接口本身不带 /api 前缀，需要去掉它
-            # 例如：请求 /api/stocks -> 后端 /stocks
-            rewrite ^/api/(.*)$ /$1 break;
-            
-            proxy_pass http://backend_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    # 后端API
+    location /api/ {
+        proxy_pass http://backend_server;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         
-        # 3. 静态资源缓存控制 (可选优化)
-        location /_next/static {
-            proxy_pass http://frontend_server;
-            expires 365d;
-            access_log off;
-        }
+        # 移除/api前缀
+        rewrite ^/api/(.*)$ /$1 break;
+    }
+
+    # 静态资源缓存
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        proxy_pass http://frontend_server;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
