--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,40 +1,51 @@
-upstream frontend_server {
-    server frontend:80;
+events {
+    worker_connections 1024;
 }
 
-upstream backend_server {
-    server backend:8080;
-}
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    
+    # 开启 Gzip 压缩
+    gzip on;
+    gzip_types text/plain application/xml text/css application/javascript;
 
-server {
-    listen 80;
-    server_name localhost;
-
-    # 前端静态文件
-    location / {
-        proxy_pass http://frontend_server;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # 定义上游服务
+    upstream frontend_server {
+        server frontend:80;  # ✅ 修正：前端运行在80端口
     }
 
-    # 后端API
-    location /api/ {
-        proxy_pass http://backend_server;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    upstream backend_server {
+        server backend:8080;
+    }
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        # 1. 前端转发 (Vite + React)
+        location / {
+            proxy_pass http://frontend_server;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # 2. 后端 API 转发
+        location /api/ {
+            proxy_pass http://backend_server;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         
-        # 移除/api前缀
-        rewrite ^/api/(.*)$ /$1 break;
-    }
-
-    # 静态资源缓存
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        proxy_pass http://frontend_server;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        # 3. 静态资源缓存控制
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+            proxy_pass http://frontend_server;
+            expires 365d;
+            add_header Cache-Control "public, immutable";
+        }
     }
 }
