--- a/stock-frontend/Dockerfile
+++ b/stock-frontend/Dockerfile
@@ -55,5 +55,5 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # 复制自定义nginx配置
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 80  # ✅ 确保暴露80端口
+EXPOSE 80  
 CMD ["nginx", "-g", "daemon off;"]
