--- a/stock-backend/src/main/resources/application-dev.yml
+++ b/stock-backend/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@ spring:
     name: stock-backend
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:stock_db}?useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:root}
+    username: root
+    password: M_wandering1
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
