--- a/stock-backend/src/main/resources/application.yml
+++ b/stock-backend/src/main/resources/application.yml
@@ -1,11 +1,24 @@
+spring:
+  application:
+    name: stock-backend
+  datasource:
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:stock_db}?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:root}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
+
 server:
   port: 8080
   servlet:
     context-path: /api
-
-spring:
-  application:
-    name: stock-backend
 
 logging:
   level:
