--- a/stock-frontend/nginx-frontend.conf
+++ b/stock-frontend/nginx-frontend.conf
@@ -43,8 +43,10 @@ server {
     }
 
     # API 代理（如果需要连接后端）
+    # 后端配置了 context-path: /api，所以这里 proxy_pass 不需要去掉 /api 前缀
+    # 注意：proxy_pass http://backend:8080; (不带斜杠) 会保留 location 匹配的部分
     location /api/ {
-        proxy_pass http://backend:8080/;
+        proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
