--- a/stock-frontend/nginx-frontend.conf
+++ b/stock-frontend/nginx-frontend.conf
@@ -42,11 +42,13 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # API 代理（如果需要连接后端）
-    # 后端配置了 context-path: /api，所以这里 proxy_pass 不需要去掉 /api 前缀
-    # 注意：proxy_pass http://backend:8080; (不带斜杠) 会保留 location 匹配的部分
+    # API 代理
+    # 匹配 /api/ 开头的请求
     location /api/ {
-        proxy_pass http://backend:8080;
+        # 关键点：proxy_pass 结尾带 /，表示剥离掉 location 匹配的 /api/ 部分
+        # 例如：/api/stocks -> http://backend:8080/stocks
+        proxy_pass http://backend:8080/;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
