--- a/stock-frontend/nginx-frontend.conf
+++ b/stock-frontend/nginx-frontend.conf
@@ -45,9 +45,9 @@ server {
     # API 代理
     # 匹配 /api/ 开头的请求
     location /api/ {
-        # 关键点：proxy_pass 结尾带 /，表示剥离掉 location 匹配的 /api/ 部分
-        # 例如：/api/stocks -> http://backend:8080/stocks
-        proxy_pass http://backend:8080/;
+        # 关键点：proxy_pass 不带 /，保留 location 匹配的 /api/ 部分
+        # 例如：/api/stocks -> http://backend:8080/api/stocks
+        proxy_pass http://backend:8080;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
