--- a/stock-frontend/nginx.conf
+++ b/stock-frontend/nginx.conf
@@ -4,25 +4,37 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Gzip压缩
+    # Gzip 压缩
     gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # 缓存控制
+    # 静态资源缓存
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # SPA路由支持
-    location / {
-        try_files $uri $uri/ /index.html;
+    # API 代理 - 使用 ^~ 提高优先级
+    location ^~ /api/ {
+        # 添加调试头，如果响应中有这个头，说明匹配到了 location
+        add_header X-Debug-Location "API-Block" always;
+
+        # 转发到后端
+        proxy_pass http://backend:8080;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 禁止缓存
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        expires -1;
     }
 
-    # 安全头
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
+    # SPA 路由支持
+    location / {
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
 }
