--- a/stock-frontend/nginx-frontend.conf
+++ b/stock-frontend/nginx-frontend.conf
@@ -6,57 +6,35 @@ server {
 
     # Gzip 压缩
     gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        application/atom+xml
-        application/geo+json
-        application/javascript
-        application/x-javascript
-        application/json
-        application/ld+json
-        application/manifest+json
-        application/rdf+xml
-        application/rss+xml
-        application/xhtml+xml
-        application/xml
-        font/eot
-        font/otf
-        font/ttf
-        image/svg+xml
-        text/css
-        text/javascript
-        text/plain
-        text/xml;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # 缓存控制
+    # 静态资源缓存
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # SPA 路由支持
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+    # API 代理 - 使用 ^~ 提高优先级
+    location ^~ /api/ {
+        # 添加调试头，如果响应中有这个头，说明匹配到了 location
+        add_header X-Debug-Location "API-Block" always;
 
-    # API 代理
-    # 匹配 /api/ 开头的请求
-    location /api/ {
-        # 关键点：proxy_pass 不带 /，保留 location 匹配的 /api/ 部分
-        # 例如：/api/stocks -> http://backend:8080/api/stocks
+        # 转发到后端
         proxy_pass http://backend:8080;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 禁止缓存
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        expires -1;
     }
 
-    # 安全头
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+    # SPA 路由支持
+    location / {
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
 }
