--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,12 +46,12 @@ jobs:
           ${{ env.REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/frontend:${{ github.sha }}
 
     # 4. 构建并推送 ETL 镜像 (Python)
-    #- name: Build and Push ETL
-    #  uses: docker/build-push-action@v5
-    #  with:
-    #    context: ./stock-etl
-    #    file: ./stock-etl/Dockerfile
-    #    push: true
-    #    tags: |
-    #      ${{ env.REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/etl:latest
-    #      ${{ env.REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/etl:${{ github.sha }}
+    - name: Build and Push ETL
+      uses: docker/build-push-action@v5
+      with:
+        context: ./stock-etl
+        file: ./stock-etl/Dockerfile
+        push: true
+        tags: |
+          ${{ env.REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/etl:latest
+          ${{ env.REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/etl:${{ github.sha }}
